# TCFD

./: .gitignore  BrdEvrgrnTrTropical_code.r  CLAUDE.md  Data_descriptions.xlsx  Export-Key.csv  FireBurntAra_code.r  FireCO2Efflux.r  FloodFreq_code.r  GUARDRAILS.md  GWstor_code.r  NdlEvrgrnTrDrtolThermo_code.r  PermaTha_code.r  README.md  ReservoirStorage.r  SWE_code.r  TCFD_intersections_code_functions_v5.r  TROUBLESHOOTING.md  WORKFLOW-ISSUES.md  WORKFLOW_STATUS.md  convertCSVtoNC_gwStor.py  convertCSVtoNC_npp-brevtrt.py  convertCSVtoNCorZARR.py  covertCSVtoNC_BurntArea.py  location_based_projections.r  modeling_cali.r  priceModel.r
isimip-pipeline/: .gitignore  README.md  config.example.yaml  pyproject.toml  run_test.py
isimip-pipeline/docs/: ROADMAP.md  TROUBLESHOOTING.md  WORKFLOW_STATUS.md  agent_instructions.md
isimip-pipeline/src/isimip_pipeline/: __init__.py  catalog.py  cli.py  config.py  discovery.py  duplicate_handler.py  errors.py  interactive.py  logging_config.py  processing_log.py
isimip-pipeline/src/isimip_pipeline/download/: __init__.py  downloader.py
isimip-pipeline/src/isimip_pipeline/processing/: __init__.py  alignment.py  features.py  output.py  processor.py  (+1 more)
isimip-pipeline/tests/: __init__.py  test_alignment.py  test_catalog.py  test_cli.py  test_config.py  test_discovery.py  test_downloader.py  test_duplicate_handler.py  test_features.py  test_integration.py  test_interactive.py  test_isimip_query.py  test_llm_parser.py  test_output.py  test_processing_log.py  test_processor.py  test_qa_report.py  test_result_table.py  test_validation.py
(+111 files in other folders)
